--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bulma": "^1.0.4",
     "crypto-js": "^4.2.0",
     "idb": "^8.0.3",
     "vue": "^3.5.17",
