--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bulma": "^1.0.4",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
     "idb": "^8.0.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
