--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dayjs": "^1.11.13",
     "idb": "^8.0.3",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-virtual-scroller": "^2.0.0-beta.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
