--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,20 +13,35 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target:
+          - x86_64-unknown-linux-gnu
+          - aarch64-unknown-linux-gnu
+          - mips64-unknown-linux-gnuabi64
+          - riscv64gc-unknown-linux-gnu
+          - x86_64-pc-windows-msvc
+          - aarch64-pc-windows-msvc
+          - x86_64-apple-darwin
+          - aarch64-apple-darwin
     steps:
       - uses: actions/checkout@v4
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           components: rustfmt
+          target: ${{ matrix.target }}
+      - uses: taiki-e/install-action@v2
+        with:
+          tool: cross
       - name: Format check
         run: cargo fmt --all -- --check
         working-directory: streamsrv
       - name: Build release
-        run: cargo build --release --verbose
+        run: cross build --release --target ${{ matrix.target }} --verbose
         working-directory: streamsrv
       - name: Upload binary
         uses: actions/upload-artifact@v4
         with:
-          name: streamsrv
-          path: streamsrv/target/release/streamsrv
+          name: streamsrv-${{ matrix.target }}
+          path: streamsrv/target/${{ matrix.target }}/release/streamsrv*
