--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,6 +7,8 @@ on:
     paths:
       - 'streamsrv/**'
   pull_request:
+    branches:
+      - main
     paths:
       - 'streamsrv/**'
 
@@ -16,30 +18,59 @@ jobs:
     strategy:
       matrix:
         target:
+          # Linux GNU
           - x86_64-unknown-linux-gnu
+          - i686-unknown-linux-gnu
           - aarch64-unknown-linux-gnu
-          - mips64-unknown-linux-gnuabi64
+          - armv7-unknown-linux-gnueabihf
           - riscv64gc-unknown-linux-gnu
+          - riscv32imac-unknown-linux-gnu
+          - mips-unknown-linux-gnu
+          - mips64-unknown-linux-gnuabi64
+
+          # Linux musl
+          - x86_64-unknown-linux-musl
+          - i686-unknown-linux-musl
+          - aarch64-unknown-linux-musl
+          - mips64-unknown-linux-muslabi64
+
+          # Windows MSVC
           - x86_64-pc-windows-msvc
+          - i686-pc-windows-msvc
           - aarch64-pc-windows-msvc
+
+          # macOS (darwin)
           - x86_64-apple-darwin
           - aarch64-apple-darwin
+
+          # WebAssembly
+          - wasm32-unknown-unknown
+          - wasm32-wasi
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions-rs/toolchain@v1
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Rust toolchain & targets
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           components: rustfmt
           target: ${{ matrix.target }}
-      - uses: taiki-e/install-action@v2
+
+      - name: Install cross
+        uses: taiki-e/install-action@v2
         with:
           tool: cross
+
       - name: Format check
         run: cargo fmt --all -- --check
         working-directory: streamsrv
+
       - name: Build release
         run: cross build --release --target ${{ matrix.target }} --verbose
         working-directory: streamsrv
+
       - name: Upload binary
         uses: actions/upload-artifact@v4
         with:
