--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,7 +26,7 @@ jobs:
           # - arm-unknown-linux-gnueabi      # ARMv6 Linux (glibc 2.17) :contentReference[oaicite:4]{index=4}
           # - arm-unknown-linux-gnueabihf    # ARMv6 hard-float :contentReference[oaicite:5]{index=5}
           # - armv7-unknown-linux-gnueabihf  # ARMv7 hard-float :contentReference[oaicite:6]{index=6}
-          - mips-unknown-linux-gnu         # MIPS big-endian :contentReference[oaicite:7]{index=7}
+          # - mips-unknown-linux-gnu         # MIPS big-endian :contentReference[oaicite:7]{index=7}
           # - mipsel-unknown-linux-gnu       # MIPS little-endian :contentReference[oaicite:8]{index=8}
           # - mips64-unknown-linux-gnuabi64  # MIPS64 BE :contentReference[oaicite:9]{index=9}
           # - mips64el-unknown-linux-gnuabi64 # MIPS64 LE :contentReference[oaicite:10]{index=10}
